# rerman

./: .gitignore  Cargo.toml  README.md
assets/: config.toml
assets/lang/: en_US.ftl
schema/: rerman-config.schema.json
src/: cli.rs  config.rs  git.rs  i18n.rs  main.rs  rer.rs
