[package]
name = "rerman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
lazy-regex = "3.1.0"
serde = { version = "1.0.202", features = ["derive"] }
tabled = "0.15.0"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
] }
toml = "0.8.13"
toml_edit = "0.22.13"
url = "2.5.0"
