[package]
name = "rerman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = "0.11.0"
directories = "5.0.1"
env_logger = "0.11.4"
fluent = "0.16.1"
lazy-regex = "3.1.0"
log = "0.4.22"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sys-locale = "0.3.1"
tabled = "0.15.0"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
] }
toml = "0.8.13"
toml_edit = "0.22.13"
unic-langid = { version = "0.9.5", features = ["macros"] }
url = "2.5.0"
